<resources>
    <string name="app_name">RecieptChart</string>
    <string name="preference_file_key">PreferenceFileName</string>
    <string name="user_id">UserID</string>
    <string name="capture_button">撮影</string>
    <string name="item_receipt_capture">レシート読み取り</string>
    <string name="drawer_menu_header">表示切り替え</string>
    <string name="floating_button_image">画像ファイル選択</string>
    <string name="bottom_table">リスト(日別)</string>
    <string name="bottom_chart">グラフ(内訳)</string>
    <string name="NewHouseholdButton">New</string>
    <string name="ItemKind">種別：</string>
    <string name="Cost">金額：</string>
    <string name="CostHint">金額を入力</string>
    <string name="Kind">種別：</string>
    <string name="KindHint">種別を選択</string>
    <string name="ItemKindDescription">select item kind</string>
    <string name="Date">日付：</string>
    <string name="DateHint">日付を入力</string>
    <string name="ItemSaveButtonText">保存</string>
    <string name="Detail">詳細：</string>
    <string name="DetailHint">詳細を入力</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButton">Cancel</string>
    <string name="CapturedCost">値段</string>
    <string name="CapturedDescription">商品詳細</string>
    <string name="RegisterDate">日時</string>
    <string name="DeleteCapturedDataButton">読み取り結果削除ボタン</string>
</resources>